--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prática Git - Web</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="js/script.js">
 </head>
 <body>
     <h1>Meu Projeto Web</h1>
     <p>Praticando Git e GitHub</p>
+     <h2>Tecnologias que estou aprendendo:</h2>
+    <ul>
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>Git e GitHub</li>
+    </ul>
+
     
     <script src="js/script.js"></script>
 </body>
