feat: adiciona footer

--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
 
     
     <script src="js/script.js"></script>
+
+     <footer>
+        <p>&copy; 2025 - Meu Projeto Web</p>
+    </footer>
+
 </body>
 </html>
