--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="js/script.js">
 </head>
 <body>
+
+     <header>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#sobre">Sobre</a>
+        </nav>
+    </header>
+
+
     <h1>Meu Projeto Web</h1>
     <p>Praticando Git e GitHub</p>
      <h2>Tecnologias que estou aprendendo:</h2>
